[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://png/cat/Idle (1).png" type="Texture" id=2]
[ext_resource path="res://png/cat/Idle (3).png" type="Texture" id=3]
[ext_resource path="res://png/cat/Idle (2).png" type="Texture" id=4]
[ext_resource path="res://png/cat/Idle (4).png" type="Texture" id=5]
[ext_resource path="res://png/cat/Idle (5).png" type="Texture" id=6]
[ext_resource path="res://png/cat/Idle (9).png" type="Texture" id=7]
[ext_resource path="res://png/cat/Idle (6).png" type="Texture" id=8]
[ext_resource path="res://png/cat/Walk (1).png" type="Texture" id=9]
[ext_resource path="res://png/cat/Walk (2).png" type="Texture" id=10]
[ext_resource path="res://png/cat/Walk (3).png" type="Texture" id=11]
[ext_resource path="res://png/cat/Walk (4).png" type="Texture" id=12]
[ext_resource path="res://png/cat/Walk (10).png" type="Texture" id=13]
[ext_resource path="res://png/cat/Walk (9).png" type="Texture" id=14]
[ext_resource path="res://png/cat/Walk (5).png" type="Texture" id=15]
[ext_resource path="res://png/cat/Walk (6).png" type="Texture" id=16]
[ext_resource path="res://png/cat/Walk (7).png" type="Texture" id=17]
[ext_resource path="res://png/cat/Walk (8).png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 20.5684, 25.9961 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 21.7663, 10 )

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
SPEED = 300
gravity = 800
jumpV = -800

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 2.67741, -6.81478 )
scale = Vector2( 0.142361, 0.142538 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( -14.6367, -35.0481, 13.4137, -34.6416, 20.0536, -5.9136, 8.94186, 24.576, -7.9968, 24.7115, -20.5992, -6.86217 )

[node name="JumpBox" type="Area2D" parent="." index="2" groups=[
"jump",
]]

position = Vector2( -1.76303, 20.7607 )
scale = Vector2( 0.825759, 0.149906 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpBox" index="0"]

position = Vector2( 2.12204, 1.01459 )
scale = Vector2( 0.994681, 1.1875 )
shape = SubResource( 2 )
_sections_unfolded = [ "Material", "Pause", "Visibility" ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

position = Vector2( 186.897, 2.78951 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="DownBox" type="Area2D" parent="." index="4" groups=[
"down",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownBox" index="0"]

position = Vector2( 0.149352, -31.8382 )
scale = Vector2( 0.965653, 0.473986 )
shape = SubResource( 3 )

[connection signal="area_entered" from="JumpBox" to="." method="_on_JumpBox_area_entered"]

[connection signal="area_exited" from="JumpBox" to="." method="_on_JumpBox_area_exited"]

[connection signal="area_entered" from="DownBox" to="." method="_on_DownBox_area_entered"]


